Energy Mix: move solar icons slightly to create more space (avoid text overlap)

--- a/app/assets/stylesheets/energy_mix.sass
+++ b/app/assets/stylesheets/energy_mix.sass
@@ -381,6 +381,7 @@ body#energy-mix
         &.solar-pv
           background-image: asset-url('energy_mix/solar-pv.png')
           width: 87px
+          margin-right: -3px
         &.solar-thermal
           background-image: asset-url('energy_mix/solar-thermal.png')
         &.natural-gas
